loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:1: error: value foreach is not a member of Int
for (i <- 28){
          ^